# Octopus

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE
CLI/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  Command.cpp  Command.h  DatabaseCommands.cpp  Font.cpp  Font.h  Main.cpp  Print.cpp  Print.h  TicketWriteCommands.cpp
Core/: CMakeLists.txt  Core.h  MathUtils.cpp  MathUtils.h  Result.h  Table.cpp  Table.h
